--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </nav>
             <section class="h-txt">
                 <span>Organized by</span>
-                <h1>RAGHU ENGINEERING COLLEGE</h1>
+                <h1>RAGHU EDUCATIONAL INSTITUTIONS</h1>
+                <h2>For Saving Lives</h2>
             </section>
 
         </header>
